# Model-Optimizer-ONNX

./: .dockerignore  .gitignore  LICENSE  MANIFEST.in  NOTICE  README.md  context7.json  mkdocs.yml  pyproject.toml
docker/: Dockerfile
docs/: README.md  artifacts-and-logging.md  cli-reference.md  docker-reference.md  index.md  installation.md  license-and-attribution.md  quantization-performance-workflow.md  troubleshooting.md  workflow.md  yolo26n-end-to-end-ptq-workflow.md
model_opt_yolo/: autotune.py  bench_trt.py  build_trt.py  calib_prep.py  cli.py  download_coco.py  eval_trt.py  logutil.py  pipeline_e2e.py  quantize.py  report_runs.py  session_paths.py  trex_analyze.py
model_opt_yolo/profiles/: matmul_fp_exclude.yaml  profile_template.yaml  yolo26n_no_nms_e2e_backbone.yaml  yolo26n_no_nms_e2e_perf_backbone_head.yaml  yolo26n_no_nms_e2e_perf_backbone_neck.yaml  yolo26n_no_nms_e2e_perf_backbone_neck_head.yaml  yolo26n_no_nms_e2e_perf_exclude_only.yaml  yolo26n_no_nms_e2e_perf_neck55.yaml
modelopt_onnx_ptq/: __init__.py  bench_trt.py  build_trt.py  calib_prep.py  cli.py  download_coco.py  eval_trt.py  io_checks.py  logutil.py  onnx_eval_layout.py  pipeline_e2e.py  quantize.py  quantize_profile.py  report_runs.py  session_paths.py  trex_analyze.py
modelopt_onnx_ptq/profiles/: matmul_fp_exclude.yaml  profile_template.yaml  yolo26n_e2e_int8_trt_low_reformat.yaml  yolo26n_no_nms_e2e_backbone.yaml  yolo26n_no_nms_e2e_int8_trt_low_reformat.yaml  yolo26n_no_nms_e2e_perf_backbone_head.yaml  yolo26n_no_nms_e2e_perf_backbone_neck.yaml  (+3 more)
skills/: README.md
(+8 files in other folders)
